--- a/templates/binary.html
+++ b/templates/binary.html
@@ -9,13 +9,19 @@
 
 <body>
     <ul>
-        <li><a name="git" href="https://github.com/p-jonczyk">GIT</a></li>
+        <li><a name="git" href="https://github.com/p-jonczyk/cipher-proj">GIT</a></li>
+        <div class="dropdown">
+            <button class="dropbtn">STEGANOGRAPHY</button>
+            <div class="dropdown-content">
+                <a name="ENCODER" href="/image_encoder">ENCODER</a>
+                <a name="DECODER" href="/image_decoder">DECODER</a>
+            </div>
+        </div>
         <li><a name="binary" href="/">BINARY</a></li>
         <li><a name="shift" href="/shift">SHIFT</a></li>
     </ul>
     <br>
-    <img src="https://openclipart.org/image/800px/303611">
-    <br>
+    <img id="logo" src="https://openclipart.org/image/800px/303611">
     <p id="page_title">BINARY CIPHER</p>
     <form action="binary" method="POST">
         <br>
